<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.BaseActivity">


    <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/berbyt222" />

    <TextView
            android:id="@+id/name_title"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:drawableLeft="@drawable/ic_action_name"
            android:hint="@string/berbyt"
            android:textSize="20dp" />


    <TextView
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:drawableLeft="@drawable/ic_action_email"
            android:hint="@string/berbytemail"
            android:textSize="20dp" />

    <TextView
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:drawableLeft="@drawable/ic_action_address"
            android:hint="@string/adress"
            android:textSize="20dp" />

    <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/adress2"
            android:textSize="20dp" />
</LinearLayout>