<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.BaseActivity"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="218dp"
            android:layout_height="169dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_action_create_user" />


    <EditText
            android:id="@+id/et_first_name"
            android:layout_width="312dp"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/ic_action_name"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bordershape"
            android:paddingLeft="10dp"

            android:hint="@string/nameProf"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/et_last_name"
            android:layout_width="312dp"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/ic_action_name"
            android:layout_marginStart="24dp"
            android:background="@drawable/bordershape"
            android:paddingLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"

            android:hint="@string/last_name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/email"
            android:layout_width="312dp"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/ic_action_email"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bordershape"
            android:paddingLeft="10dp"

            android:hint="@string/textEmail"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/password"
            android:layout_width="312dp"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/ic_action_password"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bordershape"
            android:paddingLeft="10dp"

            android:hint="@string/textPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:text="@string/action_register"
            android:layout_width="312dp"
            android:layout_marginTop="8dp"
            android:layout_height="35dp"
            android:id="@+id/btn_reg"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:background="@drawable/buttonshape"/>

</LinearLayout>

