<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.BaseActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/berbyt222" />

    <EditText
            android:id="@+id/email"
            android:layout_width="312dp"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/ic_action_email"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bordershape"
            android:paddingLeft="10dp"

            android:hint="@string/textEmail"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/password"
            android:layout_width="312dp"
            android:drawableLeft="@drawable/ic_action_password"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/bordershape"
            android:paddingLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"


            android:hint="@string/textPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    <Button
            android:id="@+id/button_signIn"
            android:layout_width="312dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonshape"
            android:text="@string/action_signIn"
            android:textColor="#000000"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size" />

    <TextView
            android:id="@+id/text_forgot"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="5dp"
            android:text="@string/forgot"
            android:textColor="@color/com_facebook_blue"
            android:textStyle="bold"
            android:textSize="16dp" />

    <Button
            android:id="@+id/button_register"
            android:layout_width="312dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonshape"
            android:text="@string/action_register"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="@dimen/text_size" />

    <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_sign_in_button"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp" />





    <!--
    <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_sign_in_button"
            android:layout_width="312dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp" />

    <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginTop="5dp"/> -->
<!-- //TODO
    <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_alignParentBottom="true">

        <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_sign_in_button"
                android:layout_width="149dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_weight="1" />
    </LinearLayout>
    -->

</LinearLayout>