<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.BaseActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="218dp"
            android:layout_height="169dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_action_profile" />

        <TextView
                android:id="@+id/name_title"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:drawableLeft="@drawable/ic_action_name"
                android:hint="@string/name"
                android:textSize="20dp" />

        <TextView
                android:id="@+id/first_name"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:hint="@string/name"
                android:textSize="18dp"
                android:textStyle="bold" />

        <!-- <TextView
                android:id="@+id/last_name_title"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawableLeft="@drawable/ic_action_name"
                android:hint="@string/last_name"
                android:textSize="20dp" />

        <EditText
                android:id="@+id/last_name"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:hint="@string/last_name"
                android:textSize="18dp"
                android:textStyle="bold" /> -->

        <TextView
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawableLeft="@drawable/ic_action_email"
                android:hint="@string/textEmail"
                android:textSize="20dp" />

        <TextView
                android:id="@+id/email"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:hint="@string/textEmail"
                android:textSize="18dp"
                android:textStyle="bold" />

    <Button
            android:id="@+id/editProfile"
            android:layout_width="312dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:text="@string/action_edit"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="@dimen/text_size" />
</LinearLayout>